league table almost there

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#999999"
-        android:endColor="#999999"
-        android:startColor="#999999"
+        android:centerColor="@color/ColorAccent"
+        android:endColor="@color/ColorAccent"
+        android:startColor="@color/ColorAccent"
         android:type="linear" />
 </shape>
