--- a/app/src/main/res/layout/mainfragment.xml
+++ b/app/src/main/res/layout/mainfragment.xml
@@ -7,6 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Main League Screen"
+        android:text="MainLeagueFragment"
         android:id="@+id/textView" />
 </LinearLayout>
