--- a/app/src/main/res/layout/tab_1.xml
+++ b/app/src/main/res/layout/tab_1.xml
@@ -4,19 +4,103 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
    <!-- NOT SO IMPORTANT CUSTOM UI STUFF -->
-
-    <android.support.v7.widget.RecyclerView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/tab1List"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        tools:context=".MainActivity"
-        android:clickable="true"
-        android:visibility="visible"
+        android:layout_height="@dimen/_200sdp"
+        android:id="@+id/clubBadge"
+        android:src="@drawable/pannamatch"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
+    <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="@dimen/_50sdp"
+       android:orientation="horizontal"
+       android:id="@+id/teamLayout"
+       android:layout_below="@+id/clubBadge">
+      <TextView
+           android:layout_width="331dp"
+           android:layout_height="match_parent"
+           android:textAppearance="?android:attr/textAppearanceLarge"
+           android:text="Team Name"
+           android:id="@+id/tTeamName"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentStart="true"
+           android:layout_alignParentRight="true"
+           android:layout_alignParentEnd="true"
+          android:textSize="30sp"
+          android:gravity="center" />
 
+     <ImageView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:id="@+id/favouriteButton"
+         android:src="@drawable/favouriteunchecked"
+         android:layout_alignParentBottom="true"
+         android:paddingEnd="@dimen/_15sdp"
+         android:paddingStart="@dimen/_15sdp"
+         android:onClick="favouriteTeam"
+         android:background="?attr/selectableItemBackgroundBorderless"
+         android:clickable="true"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="in"
+        android:id="@+id/textView3"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tPosition"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Position"
+        android:id="@+id/tPosition"
+        android:gravity="center_horizontal"
+        android:textSize="25sp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_10sdp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Currently"
+        android:id="@+id/textView2"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:layout_below="@+id/teamLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:paddingTop="@dimen/_20sdp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="League"
+        android:id="@+id/tLeague"
+        android:gravity="center_horizontal"
+        android:textSize="25sp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_10sdp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
