--- a/app/src/main/res/layout/tab_changer.xml
+++ b/app/src/main/res/layout/tab_changer.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:id="@+id/tabChanger">
 
-        <com.jacobgreenland.finalproject.teamLink.SlidingTabLayout
+        <com.jacobgreenland.finalproject.team.SlidingTabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
