--- a/app/src/main/res/layout/fixturecard.xml
+++ b/app/src/main/res/layout/fixturecard.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/fixtureCard"
     android:layout_height="@dimen/_40sdp"
     android:layout_margin="5dp"
     card_view:cardElevation="10dp"
