--- a/app/src/main/res/layout/leaguetable.xml
+++ b/app/src/main/res/layout/leaguetable.xml
@@ -88,6 +88,11 @@
                     
                     android:gravity="center" />
             </LinearLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -100,4 +105,5 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
