--- a/app/src/main/res/layout/tab_2.xml
+++ b/app/src/main/res/layout/tab_2.xml
@@ -4,18 +4,23 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
     <!-- NOT SO IMPORTANT CUSTOM UI STUFF -->
-
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/tab2List"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        tools:context=".MainActivity"
-        android:clickable="true"
-        android:visibility="visible"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/tab2List"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            tools:context=".MainActivity"
+            android:clickable="true"
+            android:visibility="visible"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
