--- a/app/src/main/res/layout/fixturecardexpanded.xml
+++ b/app/src/main/res/layout/fixturecardexpanded.xml
@@ -27,7 +27,6 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/fHomeBadge"
-            android:src="@drawable/norwich"
             android:scaleType="fitCenter"
             android:maxHeight="100dp"
             android:maxWidth="100dp"
@@ -39,7 +38,6 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/fAwayBadge"
-            android:src="@drawable/norwich"
             android:scaleType="fitCenter"
             android:maxHeight="100dp"
             android:maxWidth="100dp"
@@ -48,21 +46,32 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_calendar_month"
+            android:id="@+id/fAddToCalendar"
+            android:paddingBottom="@dimen/_2sdp"
+            android:layout_alignTop="@+id/fHomeBadge"
+            android:layout_centerHorizontal="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15:00"
             android:id="@+id/fTime"
-            android:layout_below="@+id/fDate"
-            android:layout_centerHorizontal="true" />
+            android:paddingBottom="@dimen/_10sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/fAddToCalendar"
+            android:paddingTop="@dimen/_10sdp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="09/07/1992"
             android:id="@+id/fDate"
-            android:layout_centerVertical="true"
+            android:layout_below="@+id/fTime"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
@@ -87,7 +96,7 @@
             android:textSize="16sp"
             android:clickable="false" />
 
-        </RelativeLayout>\
+        </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -109,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height = "wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="v"
+            android:text="  v  "
             android:id="@+id/vs"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
@@ -124,6 +133,29 @@
                 android:layout_alignParentEnd="true"
                 android:textSize="16sp"
                 android:layout_centerVertical="true"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingEnd="@dimen/_10sdp"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        android:visibility="visible"
+        android:id="@+id/socialSignIn">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height = "wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/ColorAccent"
+            android:text="Share!"
+            android:id="@+id/socialButton"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:clickable="false" />
+
     </RelativeLayout>
 </LinearLayout>
 </android.support.v7.widget.CardView>
