--- a/app/src/main/res/layout/tab_1.xml
+++ b/app/src/main/res/layout/tab_1.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_200sdp"
         android:id="@+id/clubBadge"
-        android:src="@drawable/pannamatch"
+        android:src="@drawable/nologo"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
