--- a/app/src/main/res/layout/fixturecardexpanded.xml
+++ b/app/src/main/res/layout/fixturecardexpanded.xml
@@ -46,15 +46,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_calendar_month"
-            android:id="@+id/fAddToCalendar"
-            android:paddingBottom="@dimen/_2sdp"
-            android:layout_alignTop="@+id/fHomeBadge"
-            android:layout_centerHorizontal="true"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,29 +71,6 @@
         android:layout_height="match_parent"
         android:paddingEnd="@dimen/_10sdp"
         android:paddingStart="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:visibility="visible"
-        android:id="@+id/fixtureStadium">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height = "wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Show Location On Map"
-            android:id="@+id/fStadium"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:textSize="16sp"
-            android:clickable="false" />
-
-        </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"
         android:paddingTop="@dimen/_10sdp"
         android:paddingBottom="@dimen/_10sdp">
             <TextView
@@ -113,7 +81,8 @@
                 android:id="@+id/fHomeTeam"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:textSize="16sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height = "wrap_content"
@@ -131,8 +100,9 @@
                 android:text="Large Text"
                 android:id="@+id/fAwayTeam"
                 android:layout_alignParentEnd="true"
-                android:textSize="16sp"
-                android:layout_centerVertical="true"/>
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:textStyle="bold" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -142,19 +112,35 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp"
         android:visibility="visible"
-        android:id="@+id/socialSignIn">
+        android:id="@+id/socialSignIn"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height = "wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/ColorAccent"
-            android:text="Share!"
-            android:id="@+id/socialButton"
-            android:layout_centerInParent="true"
+        <ImageView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/ic_action_calendar_month"
+            android:id="@+id/fAddToCalendar"
+            android:paddingBottom="@dimen/_2sdp"
             android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"/>
+
+        <ImageView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height = "@dimen/_30sdp"
+            android:id="@+id/socialButton"
             android:textSize="16sp"
-            android:clickable="false" />
+            android:src="@drawable/ic_share"
+            android:layout_alignTop="@+id/fStadium"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height = "@dimen/_30sdp"
+            android:id="@+id/fStadium"
+            android:src="@drawable/ic_map"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 </LinearLayout>
