--- a/app/src/main/res/layout/leaguetablerow.xml
+++ b/app/src/main/res/layout/leaguetablerow.xml
@@ -9,20 +9,24 @@
             android:text="1."
             android:id="@+id/teamPosition"
             android:gravity="center"
+            android:textSize="15sp"
             android:layout_width="@dimen/_20sdp" />
         <TextView
             android:layout_width="@dimen/_230sdp"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="15sp"
             android:text="Medium Text"
             android:id="@+id/teamName"
 
-            android:gravity="center_vertical" />
+            android:gravity="center_vertical"
+            android:textStyle="bold" />
         <TextView
             android:layout_width="@dimen/_29sdp"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="30"
+            android:textSize="15sp"
             android:id="@+id/teamGamesPlayed"
             
             android:gravity="center" />
@@ -31,6 +35,7 @@
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="30"
+            android:textSize="15sp"
             android:id="@+id/teamPoints"
             
             android:gravity="center" />
