--- a/app/src/main/res/layout/socialdialog.xml
+++ b/app/src/main/res/layout/socialdialog.xml
@@ -5,18 +5,24 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_height="@dimen/_50sdp"
         android:id="@+id/dialogFacebookShare"
         android:layout_alignParentTop="true"
-        style="@style/com_facebook_button_share" />
+        style="@style/com_facebook_button_share"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_20sdp" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_height="@dimen/_50sdp"
         android:id="@+id/dialogTwitterShare"
         android:layout_below="@+id/dialogFacebookShare"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="Tweet" />
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:background="@drawable/tweetbutton" />
 
 </RelativeLayout>
