--- a/app/src/main/res/layout/tab_1.xml
+++ b/app/src/main/res/layout/tab_1.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/ColorPrimary">
    <!-- NOT SO IMPORTANT CUSTOM UI STUFF -->
     <ImageView
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <LinearLayout
        android:layout_width="match_parent"
